Fix bottom overflow

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,7 @@ body {
 	margin: 0;
 	padding: 0;
 	overflow-x: hidden;
+	background-color: #111827; /* gray-900 */
 }
 
 body {
